# newsletter-service

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.sqlx/: query-280c54cda5e9b054da900914299412ac9b7062f4bebe9264dfb9762e4e82f3b4.json
configuration/: base.yaml
migrations/: 20260113152938_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_checks.rs
