[package]
name = "newsletter-service"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# We can have multiple binaries but only one lib
[[bin]]
path = "src/main.rs"
name = "newsletter-service"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.228", features = ["derive"]}
config = "0.15.19"

[dev-dependencies]
reqwest = "0.13.1"

[dependencies.sqlx]
version="0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]