[package]
name = "newsletter-service"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

# We can have multiple binaries but only one lib
[[bin]]
path = "src/main.rs"
name = "newsletter-service"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.228", features = ["derive"]}
config = "0.15.19"
uuid = {version = "1", features = ["v4"]}
chrono = {version = "0.4.43", default-features = false, features = ["clock"]}
env_logger = "0.11.8"
log = "0.4"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
reqwest = "0.13.1"

[dependencies.sqlx]
version="0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
